# oter

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  package.json  pre-install.js  start.js  uninstall.js
.github/workflows/: CI.yml
layers/: POINT.dbf  POINT.shp  POINT.shx  POLYGON.dbf  POLYGON.shp  POLYGON.shx  POLYLINE.dbf  POLYLINE.shp  POLYLINE.shx
src/: cli.rs  lib.rs  main.rs
src/formats/: mod.rs  shapefile.rs
src/utils/: utils.rs
test/: POINT.dbf  POINT.shp  POINT.shx  POLYGON.dbf  POLYGON.shp  POLYGON.shx
