[package]
name = "quack"
version = "0.1.0"
edition = "2021"
authors = ["Aman Deep<deep.aman6174@gmail.com>"]
description = "Quack is a command-line tool designed to help users seamlessly convert spatial data between various formats."
readme = "README.md"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["geospatial"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dbase = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shapefile = "0.6.0"
walkdir = "2.5.0"
indicatif = "0.16"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]
